# aws-cdnz-2024-demo-bedrock-langchain

./: README.md  pyproject.toml
src/aws_community_day_demo/: 1_bedrock_api.ipynb  2_langchain.ipynb  3_langgraph.ipynb
src/aws_community_day_demo/bedrock_agent/: README.md  app.py  outputs.json
src/aws_community_day_demo/bedrock_agent/bedrock_agent/: bedrock_agent_stack.py
src/aws_community_day_demo/bedrock_agent/code/: invoke_bedrock_agent.ipynb
src/aws_community_day_demo/bedrock_agent/code/lambdas/create-index-lambda/: cfnresponse.py  index.py
src/utils/: debug.py  llm.py
